# IaC-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  iac_agent.py  mypy.ini  pyproject.toml  tox.ini
python/: .env.example
python/iac_assistant/: main.py
python/iac_assistant/utils/: docker_utils.py  environment.py  file_utils.py  terraform_utils.py
